--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <link rel="stylesheet" href="style.css" media="all">
   </head>
   <body class="">
-    <main class="flex flex-center main">
-      <div class="timer">
+      <div class="flex flex-center timer">
         <h1>Pomodoro Timer</h1>
         <div class="display">
           Click to Start!
         </div>
       </div>
-    </main>
     <script type="text/javascript" src="timer.js"></script>
   </body>
 </html>
