Fixed timer being a div instead of button.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body class="">
     <button class="settings">Settings</button>
-    <div class="flex flex-center timer">
+    <button class="flex flex-center timer">
       <h1>Pomodoro Timer</h1>
       <div class="display">Click to Start!</div>
-    </div>
+    </button>
     <button class="reset-button">Reset Timer</button>
     <script src="./dist/main.js"></script>
   </body>
