--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="">
     <button class="settings">Settings</button>
-    <button class="flex flex-center timer">
+    <button class="flex flex-center flex-column timer">
       <h1>Pomodoro Timer</h1>
       <div class="display">Click to Start!</div>
     </button>
