Updated styles & added bit more semantics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <button class="flex flex-center flex-column timer">
       <h1>Pomodoro Timer</h1>
-      <div class="display">Click to Start!</div>
+      <output class="display">Click to Start!</output>
     </button>
 
     <button class="reset-button">Reset Timer</button>
